--- a/ModbusRTU.ioc
+++ b/ModbusRTU.ioc
@@ -7,12 +7,13 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F407VET6
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM6
-Mcu.IP4=USART3
-Mcu.IPNb=5
+Mcu.IP0=CRC
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM6
+Mcu.IP5=USART3
+Mcu.IPNb=6
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
@@ -20,8 +21,9 @@ Mcu.Pin1=PC15-OSC32_OUT
 Mcu.Pin10=PB11
 Mcu.Pin11=PA13
 Mcu.Pin12=PA14
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin13=VP_CRC_VS_CRC
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PA0-WKUP
@@ -30,7 +32,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PC5
 Mcu.Pin8=PB2
 Mcu.Pin9=PB10
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -107,7 +109,7 @@ ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=2
+ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
@@ -122,7 +124,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM6_Init-TIM6-false-HAL-true,false-4-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,false-2-MX_GPIO_Init-GPIO-false-HAL-true,false-3-MX_TIM6_Init-TIM6-false-HAL-true,false-4-MX_USART3_UART_Init-USART3-false-HAL-true,false-5-MX_CRC_Init-CRC-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -162,6 +164,8 @@ SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
+VP_CRC_VS_CRC.Mode=CRC_Activate
+VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
