--- a/ModbusRTU.ioc
+++ b/ModbusRTU.ioc
@@ -12,40 +12,36 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=RTC
 Mcu.IP4=SDIO
-Mcu.IP5=SPI1
-Mcu.IP6=SYS
-Mcu.IP7=TIM6
-Mcu.IP8=USART3
-Mcu.IPNb=9
+Mcu.IP5=SYS
+Mcu.IP6=TIM6
+Mcu.IP7=USART3
+Mcu.IPNb=8
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PC5
-Mcu.Pin11=PB2
-Mcu.Pin12=PB10
-Mcu.Pin13=PB11
-Mcu.Pin14=PC8
-Mcu.Pin15=PC9
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=PC10
-Mcu.Pin19=PC11
+Mcu.Pin10=PB11
+Mcu.Pin11=PC8
+Mcu.Pin12=PC9
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PC10
+Mcu.Pin16=PC11
+Mcu.Pin17=PC12
+Mcu.Pin18=PD2
+Mcu.Pin19=VP_CRC_VS_CRC
 Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PC12
-Mcu.Pin21=PD2
-Mcu.Pin22=VP_CRC_VS_CRC
-Mcu.Pin23=VP_RTC_VS_RTC_Activate
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin20=VP_RTC_VS_RTC_Activate
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA1
 Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=26
+Mcu.Pin7=PC5
+Mcu.Pin8=PB2
+Mcu.Pin9=PB10
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -84,12 +80,6 @@ PA4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.Locked=true
 PA4.Signal=GPXTI4
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Mode=Asynchronous
@@ -155,7 +145,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-true,false-2-MX_GPIO_Init-GPIO-false-HAL-true,false-3-MX_TIM6_Init-TIM6-false-HAL-true,false-4-MX_USART3_UART_Init-USART3-false-HAL-true,false-5-MX_CRC_Init-CRC-false-HAL-true,false-6-MX_RTC_Init-RTC-false-HAL-true,false-7-MX_SDIO_SD_Init-SDIO-false-HAL-true,false-8-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,false-2-MX_GPIO_Init-GPIO-false-HAL-true,false-3-MX_TIM6_Init-TIM6-false-HAL-true,false-4-MX_USART3_UART_Init-USART3-false-HAL-true,false-5-MX_CRC_Init-CRC-false-HAL-true,false-6-MX_RTC_Init-RTC-false-HAL-true,false-7-MX_SDIO_SD_Init-SDIO-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -194,11 +184,6 @@ SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
-SPI1.CalculateBaudRate=42.0 MBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 VP_CRC_VS_CRC.Mode=CRC_Activate
