--- a/ModbusRTU.ioc
+++ b/ModbusRTU.ioc
@@ -7,51 +7,66 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F407VET6
 Mcu.Family=STM32F4
-Mcu.IP0=FSMC
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM6
-Mcu.IP5=USART3
-Mcu.IPNb=6
+Mcu.IP0=CRC
+Mcu.IP1=FSMC
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=RTC
+Mcu.IP5=SDIO
+Mcu.IP6=SPI1
+Mcu.IP7=SYS
+Mcu.IP8=TIM6
+Mcu.IP9=USART3
+Mcu.IPNb=10
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PE8
-Mcu.Pin11=PE9
-Mcu.Pin12=PE10
-Mcu.Pin13=PE11
-Mcu.Pin14=PE12
-Mcu.Pin15=PE13
-Mcu.Pin16=PE14
-Mcu.Pin17=PE15
-Mcu.Pin18=PB10
-Mcu.Pin19=PB11
+Mcu.Pin10=PC5
+Mcu.Pin11=PB2
+Mcu.Pin12=PE7
+Mcu.Pin13=PE8
+Mcu.Pin14=PE9
+Mcu.Pin15=PE10
+Mcu.Pin16=PE11
+Mcu.Pin17=PE12
+Mcu.Pin18=PE13
+Mcu.Pin19=PE14
 Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PD8
-Mcu.Pin21=PD9
-Mcu.Pin22=PD10
-Mcu.Pin23=PD13
-Mcu.Pin24=PD14
-Mcu.Pin25=PD15
-Mcu.Pin26=PA13
-Mcu.Pin27=PA14
-Mcu.Pin28=PD0
-Mcu.Pin29=PD1
+Mcu.Pin20=PE15
+Mcu.Pin21=PB10
+Mcu.Pin22=PB11
+Mcu.Pin23=PD8
+Mcu.Pin24=PD9
+Mcu.Pin25=PD10
+Mcu.Pin26=PD13
+Mcu.Pin27=PD14
+Mcu.Pin28=PD15
+Mcu.Pin29=PC8
 Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin30=PD4
-Mcu.Pin31=PD5
-Mcu.Pin32=PD7
-Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin34=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin30=PC9
+Mcu.Pin31=PA13
+Mcu.Pin32=PA14
+Mcu.Pin33=PC10
+Mcu.Pin34=PC11
+Mcu.Pin35=PC12
+Mcu.Pin36=PD0
+Mcu.Pin37=PD1
+Mcu.Pin38=PD2
+Mcu.Pin39=PD4
 Mcu.Pin4=PA0-WKUP
+Mcu.Pin40=PD5
+Mcu.Pin41=PD7
+Mcu.Pin42=VP_CRC_VS_CRC
+Mcu.Pin43=VP_RTC_VS_RTC_Activate
+Mcu.Pin44=VP_SYS_VS_Systick
+Mcu.Pin45=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin5=PA1
 Mcu.Pin6=PA4
-Mcu.Pin7=PC5
-Mcu.Pin8=PB2
-Mcu.Pin9=PE7
-Mcu.PinsNb=35
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=46
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -90,6 +105,12 @@ PA4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.Locked=true
 PA4.Signal=GPXTI4
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Mode=Asynchronous
@@ -99,6 +120,12 @@ PB2.GPIO_Label=BLUE
 PB2.Locked=true
 PB2.PinState=GPIO_PIN_SET
 PB2.Signal=GPIO_Output
+PC10.Mode=SD_4_bits_Wide_bus
+PC10.Signal=SDIO_D2
+PC11.Mode=SD_4_bits_Wide_bus
+PC11.Signal=SDIO_D3
+PC12.Mode=SD_4_bits_Wide_bus
+PC12.Signal=SDIO_CK
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -108,6 +135,10 @@ PC5.GPIO_Label=RED
 PC5.Locked=true
 PC5.PinState=GPIO_PIN_SET
 PC5.Signal=GPIO_Output
+PC8.Mode=SD_4_bits_Wide_bus
+PC8.Signal=SDIO_D0
+PC9.Mode=SD_4_bits_Wide_bus
+PC9.Signal=SDIO_D1
 PD0.Mode=16b-d1
 PD0.Signal=FSMC_D2
 PD1.Mode=16b-d1
@@ -120,6 +151,8 @@ PD14.Mode=16b-d1
 PD14.Signal=FSMC_D0
 PD15.Mode=16b-d1
 PD15.Signal=FSMC_D1
+PD2.Mode=SD_4_bits_Wide_bus
+PD2.Signal=SDIO_CMD
 PD4.Mode=Lcd1
 PD4.Signal=FSMC_NOE
 PD5.Mode=Lcd1
@@ -183,8 +216,8 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,false-2-MX_GPIO_Init-GPIO-false-HAL-true,false-3-MX_TIM6_Init-TIM6-false-HAL-true,false-4-MX_USART3_UART_Init-USART3-false-HAL-true,false-5-MX_FSMC_Init-FSMC-false-HAL-true
-RCC.48MHZClocksFreq_Value=84000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,false-2-MX_GPIO_Init-GPIO-false-HAL-true,false-3-MX_TIM6_Init-TIM6-false-HAL-true,false-4-MX_USART3_UART_Init-USART3-false-HAL-true,false-5-MX_FSMC_Init-FSMC-false-HAL-true,false-6-MX_CRC_Init-CRC-false-HAL-true,false-7-MX_RTC_Init-RTC-false-HAL-true,false-8-MX_SDIO_SD_Init-SDIO-false-HAL-true,false-9-MX_SPI1_Init-SPI1-false-HAL-true
+RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=42000000
@@ -200,13 +233,14 @@ RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
 RCC.PLLCLKFreq_Value=168000000
 RCC.PLLM=8
 RCC.PLLN=168
-RCC.PLLQCLKFreq_Value=84000000
+RCC.PLLQ=7
+RCC.PLLQCLKFreq_Value=48000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=12500000
 RCC.SYSCLKFreq_VALUE=168000000
@@ -221,8 +255,17 @@ SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
+SPI1.CalculateBaudRate=42.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
+VP_CRC_VS_CRC.Mode=CRC_Activate
+VP_CRC_VS_CRC.Signal=CRC_VS_CRC
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
